# indextts_gui

./: README.md  indextts_batch_gui.spec  pyproject.toml
2/: set_meta.json
2/annojpclass2/: set_meta.json
2/test/: defaults.json
openspec/changes/add-indextts-batch-gui/: design.md  proposal.md  tasks.md
openspec/changes/add-indextts-batch-gui/specs/indextts-batch-gui/: spec.md
scripts/: build_windows.ps1
src/indextts_batch_gui/: __init__.py  __main__.py  api_client.py  audio.py  config.py  filenames.py  models.py  scheduler.py  storage.py
src/indextts_batch_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/indextts_batch_gui/ui/: main_window.py
tests/: test_api_client.py  test_filenames.py  test_models.py  test_scheduler_smoke.py  test_storage.py
